# LocationAllocation

./: .gitignore  README.md  sf-muni-stops-aggregated.csv  sf-muni-stops.csv  test-aggregated.csv  test.csv
data/: cab_txt.dbf  cab_txt.shp  cab_txt.shx
data/ONE data/: bus_traces_0-300.txt  bus_traces_10-13.txt  cabspotting-facilities.txt
data/RealityMining/: README.txt
data/SanFrancisco_traffic_signals/: mta_traffic_signals.dbf  mta_traffic_signals.sbn  mta_traffic_signals.sbx  mta_traffic_signals.shp  mta_traffic_signals.shp.xml  mta_traffic_signals.shx
data/SanFrancisco_traffic_signals/sf-muni/: ONE_trace.txt  ONE_trace_1.txt  routes.txt  shapes.txt  stop_times.txt  trips.txt
data/TestSynthetic/: test_NodePositionReport.txt
data/cabspotting/: new_abwecnij.txt  trace.shx
data/dieselnet-fall-2007/basestation-mobile/: 2007-10-27  2007-10-28  2007-11-04  2007-11-10  2007-11-11
data/dieselnet-fall-2007/gps_logs/3027/: 2007-10-23  2007-10-24  2007-10-26  2007-10-29  2007-10-30  2007-10-31  2007-11-01  2007-11-02  2007-11-03  2007-11-04  2007-11-05  2007-11-07  2007-11-08  2007-11-09
data/dieselnet-fall-2007/gps_logs/3028/: 2007-10-23  2007-10-24  2007-10-25  2007-10-26  2007-10-27  2007-10-28  2007-10-29  2007-10-30  2007-10-31  2007-11-01  2007-11-02  2007-11-03  2007-11-04  2007-11-05  2007-11-06  2007-11-07  2007-11-08  2007-11-09  2007-11-10  2007-11-11
data/dieselnet-fall-2007/gps_logs/3029/: 2007-10-23  2007-10-24  2007-10-25  2007-10-26  2007-10-29  2007-10-30  2007-11-01  2007-11-02  2007-11-03  2007-11-04  2007-11-05  2007-11-06  2007-11-07  2007-11-08  2007-11-09  2007-11-10
data/dieselnet-fall-2007/gps_logs/3030/: 2007-10-23  2007-10-24  2007-10-25  2007-10-26  2007-10-27  2007-10-29  (+9 more)
data/dieselnet-fall-2007/mobile-mobile/: 2007-10-23  2007-10-24  2007-10-25  2007-10-26  2007-10-29  2007-10-30  2007-10-31  2007-11-01  2007-11-02  2007-11-05  2007-11-06  2007-11-07  2007-11-08  2007-11-09
data/dieselnet-fall-2007/mobile-mobile-relay-mesh/: 2007-10-23  2007-10-24  2007-10-25  2007-10-26  2007-10-27  2007-10-28  2007-10-29  2007-10-30  2007-10-31  2007-11-01  2007-11-02  2007-11-03  2007-11-04  2007-11-05  2007-11-06  2007-11-07  2007-11-08  2007-11-09  2007-11-10  2007-11-11
data/dieselnet-fall-2007/xtendtrace/: 2008-01-28  2008-01-29  2008-01-30  2008-01-31  2008-02-01  2008-02-02  2008-02-03  2008-02-04
data/wtd_data_release/: README  ap_locations.csv
outputs/Distribution/: MAP_50_nodes.csv  MAP_50_nodes_s_1.csv  MAP_50_nodes_s_2.csv  MAP_50_nodes_s_3.csv  MAP_50_nodes_s_5.csv  MAP_50_nodes_s_6.csv  MAP_50_nodes_s_7.csv  results_settings.txt
outputs/Manhattan/: performance-100nodes-grid-2.txt  performance-100nodes-grid-limited-storage-backend-node-no-contacts-fixed-storage-all-meet.txt  performance-100nodes-grid-limited-storage-backend-node-no-contacts-fixed-storage-first-meet.txt  performance-100nodes-grid.txt  performance-100nodes-random.txt
outputs/RWP/: performance-100nodes-grid-limited-storage-backend-move.txt  performance-100nodes-grid-limited-storage-backend-node-no-contacts-fixed-storage-first-meet-same-total-storage-move.txt  performance-100nodes-grid-limited-storage-backend-node-no-contacts-fixed-storage-first-meet-same-total-storage-replicate.txt  performance-100nodes-grid-limited-storage-backend-replicate.txt  performance-100nodes-grid-unlimited-storage-no-backend-node-contacts.txt  performance-100nodes-grid-unlimited-storage-no-backend-node-no-contacts-all-meet.txt  performance-100nodes-grid-unlimited-storage-no-backend-node-no-contacts-first-meet-2.txt  performance-100nodes-grid-unlimited-storage-no-backend-node-no-contacts-first-meet.txt  performance-100nodes-grid-unlimited-storage-no-backend-node-no-contacts-moving-storage-all-meet.txt  performance-100nodes-grid-unlimited-storage-no-backend-node-no-contacts-moving-storage-first-meet.txt  performance-100nodes-grid.txt  performance-100nodes-random.txt  performance-50storage-grid-unlimited-storage-no-backend-node-contacts.txt
outputs/WorkingDayMovement/: plot-100-25-nodes-WDM-placement.txt   plot-100-25-nodes-grid-placement.txt 
outputs/cabspotting/: cabspotting_2nodesTrace.txt  succesRatio.txt
scripts/: aggregate-points.py  alloc.txt  difference.py  filesystem_settings.txt  formatting_tcds.py  getGTFSStops.py  getWKTPoints.py  parse-gtfs.py  processSettings.py  progress.h  projectPipeline.py  qtconcurrent.cpp  qtconcurrent.pro  representBackend.py  representBackendMCF.py  runONESim.py  settings-out.txt  settings.txt  settings1.txt  tcds-analysis.py  test-intersections.py  test-iterative-avg.py  testProgressBar.cpp
scripts/WorkingDayData/: WDM-g1-homes.wkt  WDM-g1-offices.wkt  WDM-g2-homes.wkt  WDM-g2-offices.wkt  world.wkt
scripts/experiment_logs/: exp-2  exp-4-results.txt  exp-6-results.txt  exp2-sim3.txt  exp4-sim1.txt  exp6-sim2.txt  exp7-sim1.txt  exp7-sim10.txt  exp7-sim11.txt  exp7-sim12.txt  exp7-sim16.txt  exp7-sim17.txt  exp7-sim2.txt  exp7-sim4.txt  exp7-sim7.txt  exp7-sim9.txt  exp8-sim13.txt  exp8-sim14.txt  exp8-sim15.txt  exp8-sim18.txt  exp8-sim19.txt  exp8-sim20.txt  exp8-sim21.txt  exp8-sim22.txt  exp8-sim23.txt  exp8-sim24.txt  exp8-sim3.txt  exp8-sim5.txt  exp8-sim6.txt  exp8-sim8.txt  log_history.txt
scripts/qtconcurrent.app/Contents/: Info.plist
src/: CMakeLists.txt  Location-allocation.pro  NumberDialog.cpp  PointLayer.cpp  PointLayer.h  allocation_dialog.cpp  allocation_dialog.h  allocationdialog.cpp  allocationdialog.h  allocationlayer.cpp  allocationlayer.h  compute_allocation.cpp  compute_allocation.h  compute_allocation_layer.cpp  compute_allocation_layer.h  compute_allocation_test.cpp  computeallocation.cpp  computeallocation.h  constants.h  csv_parser.h  dockwidget_plots.cpp  dockwidget_plots.h  dockwidget_plots.ui  dockwidgetplots.cpp  dockwidgetplots.h  dockwidgetplots.ui  export_dialog.cpp  export_dialog.h  flickr_layer.cpp  flickr_layer.h  geometries.h  geometry_index.cpp  geometry_index.h  geometry_layer.cpp  geometry_layer.h  geometryindex.cpp  geometryindex.h  graphicsscene.cpp  graphicsscene.cpp.autosave  graphicsscene.h  (+129 more)
(+421 files in other folders)
